--- a/static/assets/styles/global.css
+++ b/static/assets/styles/global.css
@@ -13,3 +13,22 @@
 .text-shadow {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.4) transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 20px;
+  border: 5px solid transparent;
+}
